tests/fixtures/valid/whitespace-edge-cases.wgsl
// Edge cases with whitespace


fn   spacedFunction  (  a  :  f32  ,  b  :  f32  )  ->  f32  {
    return   a   +   b  ;
}


struct   SpacedStruct   {
    field1  :  f32  ,
    field2  :  vec3<f32>  ,
}


