tests/fixtures/invalid/invalid-struct.wgsl
// Invalid struct syntax
struct Test {
    field1: f32
    field2: vec3<f32>,
}
